# fullstack-ai-marketing-platform-

./: .gitignore
asset-processing-service/: .gitignore  Dockerfile  README.md  pyproject.toml
nextjs/: package-lock.json  package.json
nextjs/app/: page.tsx
nextjs/app/(dashboard)/project/[projectId]/: loading.tsx  not-found.tsx  page.tsx
nextjs/app/(dashboard)/projects/: loading.tsx  page.tsx
nextjs/app/(dashboard)/settings/: loading.tsx  page.tsx
nextjs/app/(dashboard)/template/[templateID]/: loading.tsx  not-found.tsx  page.tsx
nextjs/app/(dashboard)/templates/: loading.tsx  page.tsx
nextjs/app/(landing)/: page.tsx
nextjs/app/test/: page.tsx
nextjs/components/: MarketingCampaigns.tsx  RestaurantShowcase.tsx
nextjs/components/college/: custom-button.tsx  custom-input.tsx
nextjs/public/images/restaurants/: README.md
