[tool.poetry]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = ["kanav9063 <kanav@ucsb.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
asset-processing-service = "asset_processing_service.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
